--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-440.8KB/s(Youtube:不良林), server: cn01.downloadmovie.cn, port: 65062, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: cn01.downloadmovie.cn}}
-  - {name: 🇫🇷 法国-567.6KB/s(Youtube:不良林), server: 195.154.200.150, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇨🇦 加拿大-2.07MB/s(Youtube:不良林), server: 196.247.59.154, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 中国-336.1KB/s(Youtube:不良林), server: cn04.downloadmovie.cn, port: 65028, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: cn04.downloadmovie.cn}}
   - {name: 🇨🇦 加拿大-1.29MB/s(Youtube:不良林), server: 196.247.59.154, port: 806, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇺🇸 美国-2.70MB/s(Youtube:不良林), server: 20.123.187.212, port: 27931, type: vmess, uuid: 256eae41-0b8f-4faa-bce8-6366011dc19f, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-399.9KB/s(Youtube:不良林), server: 120.233.150.146, port: 65097, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
   - {name: 🇷🇺 俄罗斯联邦-2.75MB/s(Youtube:不良林), server: 141.98.168.251, port: 443, type: trojan, password: LiX1tV, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-2.59MB/s(Youtube:不良林), server: sg-03.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: sg-03.licom.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.96MB/s(Youtube:不良林), server: in-us-1.onebox6.org, port: 38401, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-us-1.onebox6.org}}
+  - {name: 🇩🇪 德国-855.8KB/s(Youtube:不良林), server: 165.22.73.126, port: 23335, type: ss, cipher: aes-256-cfb, password: 7d99ae502227454ea998d71e4b62a388}
   - {name: 🇨🇳 中国-332.5KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65070, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
   - {name: 🇨🇳 中国-387.3KB/s(Youtube:不良林), server: 116.129.254.177, port: 65075, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇨🇳 中国-489.8KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65078, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
+  - {name: 🇭🇰 香港-2.38MB/s(Youtube:不良林), server: 527hk1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 527hk1.fans8.xyz}}
+  - {name: 🇨🇳 中国-976.2KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-440.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-567.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-336.1KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-399.9KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.75MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.96MB/s(Youtube:不良林)
+      - 🇩🇪 德国-855.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-332.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-387.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-489.8KB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-976.2KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-440.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-567.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-336.1KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-399.9KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.75MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.96MB/s(Youtube:不良林)
+      - 🇩🇪 德国-855.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-332.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-387.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-489.8KB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-976.2KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-440.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-567.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-336.1KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-399.9KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.75MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.96MB/s(Youtube:不良林)
+      - 🇩🇪 德国-855.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-332.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-387.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-489.8KB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-976.2KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-2.38MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-440.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-567.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-336.1KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-399.9KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.75MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.96MB/s(Youtube:不良林)
+      - 🇩🇪 德国-855.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-332.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-387.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-489.8KB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-976.2KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-440.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-567.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-336.1KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-399.9KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.75MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.96MB/s(Youtube:不良林)
+      - 🇩🇪 德国-855.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-332.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-387.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-489.8KB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-976.2KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-440.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-567.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-336.1KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-399.9KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.75MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.96MB/s(Youtube:不良林)
+      - 🇩🇪 德国-855.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-332.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-387.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-489.8KB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-976.2KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-440.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-567.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-336.1KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-399.9KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.75MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.96MB/s(Youtube:不良林)
+      - 🇩🇪 德国-855.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-332.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-387.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-489.8KB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-976.2KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
