--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇦 加拿大-1.29MB/s(Youtube:不良林), server: 196.247.59.154, port: 806, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 中国-399.9KB/s(Youtube:不良林), server: 120.233.150.146, port: 65097, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
-  - {name: 🇷🇺 俄罗斯联邦-2.75MB/s(Youtube:不良林), server: 141.98.168.251, port: 443, type: trojan, password: LiX1tV, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.96MB/s(Youtube:不良林), server: in-us-1.onebox6.org, port: 38401, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-us-1.onebox6.org}}
-  - {name: 🇩🇪 德国-855.8KB/s(Youtube:不良林), server: 165.22.73.126, port: 23335, type: ss, cipher: aes-256-cfb, password: 7d99ae502227454ea998d71e4b62a388}
-  - {name: 🇨🇳 中国-332.5KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65070, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-387.3KB/s(Youtube:不良林), server: 116.129.254.177, port: 65075, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
-  - {name: 🇨🇳 中国-489.8KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65078, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
-  - {name: 🇭🇰 香港-2.38MB/s(Youtube:不良林), server: 527hk1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 527hk1.fans8.xyz}}
+  - {name: 🇨🇳 中国-204.5KB/s(Youtube:不良林), server: 116.129.254.177, port: 65077, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇨🇳 中国-4.13MB/s(Youtube:不良林), server: gzyd1.52147.top, port: 30080, type: trojan, password: 2778263c-486d-4af8-9ba4-25fc536b5bac, sni: gzyd1.52147.top, skip-cert-verify: true}
   - {name: 🇨🇳 中国-976.2KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-340.9KB/s(Youtube:不良林), server: 36.134.156.5, port: 65065, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.156.5}}
+  - {name: 🇨🇳 中国-195.5KB/s(Youtube:不良林), server: 116.129.254.177, port: 65043, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇺🇸 美国-1.23MB/s(Youtube:不良林), server: 92.38.176.81, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-449.6KB/s(Youtube:不良林), server: 51.81.223.32, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.47MB/s(Youtube:不良林), server: vus2.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vus2.0bad.com}}
+  - {name: 🇺🇸 美国-676.3KB/s(Youtube:不良林), server: ifffffffuuuuuuus.qiqicdn2.cf, port: 443, type: vmess, uuid: 5a36cce4-0527-4d36-bf4a-6c215ef9c524, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /5a36cce4-0527-4d36-bf4a-6c215ef9c524-vmess, ws-headers: {Host: ifffffffuuuuuuus.qiqicdn2.cf}}
+  - {name: 🇯🇵 日本-3.45MB/s(Youtube:不良林), server: 85.208.108.93, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-399.9KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.96MB/s(Youtube:不良林)
-      - 🇩🇪 德国-855.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-332.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-387.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-489.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-204.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.13MB/s(Youtube:不良林)
       - 🇨🇳 中国-976.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-340.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-195.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-449.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-676.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.45MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇦 加拿大-1.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-399.9KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.96MB/s(Youtube:不良林)
-      - 🇩🇪 德国-855.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-332.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-387.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-489.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-204.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.13MB/s(Youtube:不良林)
       - 🇨🇳 中国-976.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-340.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-195.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-449.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-676.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.45MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-399.9KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.96MB/s(Youtube:不良林)
-      - 🇩🇪 德国-855.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-332.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-387.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-489.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-204.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.13MB/s(Youtube:不良林)
       - 🇨🇳 中国-976.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-340.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-195.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-449.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-676.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.45MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-2.38MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇦 加拿大-1.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-399.9KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.96MB/s(Youtube:不良林)
-      - 🇩🇪 德国-855.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-332.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-387.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-489.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-204.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.13MB/s(Youtube:不良林)
       - 🇨🇳 中国-976.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-340.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-195.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-449.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-676.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.45MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-399.9KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.96MB/s(Youtube:不良林)
-      - 🇩🇪 德国-855.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-332.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-387.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-489.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-204.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.13MB/s(Youtube:不良林)
       - 🇨🇳 中国-976.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-340.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-195.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-449.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-676.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.45MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-1.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-399.9KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.96MB/s(Youtube:不良林)
-      - 🇩🇪 德国-855.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-332.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-387.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-489.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-204.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.13MB/s(Youtube:不良林)
       - 🇨🇳 中国-976.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-340.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-195.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-449.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-676.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.45MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-1.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-399.9KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.96MB/s(Youtube:不良林)
-      - 🇩🇪 德国-855.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-332.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-387.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-489.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-204.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.13MB/s(Youtube:不良林)
       - 🇨🇳 中国-976.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-340.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-195.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-449.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-676.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.45MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
